--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,94 @@
 </div>
  -->
 
+ <div class="card clearfix" data-score="15" data-price="13.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2McZNYC"><img src="https://m.media-amazon.com/images/I/71shQ08ikfL._SR400,400_.jpg" alt="Spiralizer Vegetable Slicer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2McZNYC">Spiralizer Vegetable Slicer, Spiral Slicer Strongest-and-Heaviest Duty Salad Utensil, Best Veggie Pasta & Spaghetti...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.59</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">15BEQYF9</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $15.99</strong> with promo code: <strong class="m_codes">15BEQYF9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2McZNYC">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="20.82">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31QC8Ut"><img src="https://m.media-amazon.com/images/I/81IppatGUJL._SR400,400_.jpg" alt="STARNUO French Press Coffee Maker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31QC8Ut">STARNUO French Press Coffee Maker, 34 Ounce,1.0 Liter,18/10 Stainless Steel,Heat Resistant Borosilicate Glass,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.82</span><span class="ori_price">$24.49</span>
+        <div class="tooltip_common tooltip_green"><span> + $2 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $2 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">15NZVAI5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $24.49</strong> with promo code: <strong class="m_codes">15NZVAI5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 26, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31QC8Ut">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="9.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LJezau"><img src="https://m.media-amazon.com/images/I/51JFdbbIYHL._SR400,400_.jpg" alt="JYYT Frosted Ceramic Cup Coffee Cup" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LJezau">JYYT Frosted Ceramic Cup Coffee Cup Mug Tea Cup for Office and Home Perfect Gift,Maximum Capacity 13.5oz (yellow)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.09</span><span class="ori_price">$12.99</span></address>
+      <textarea readonly="readonly" class="code_area">30GDXUXQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $12.99</strong> with promo code: <strong class="m_codes">30GDXUXQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LJezau">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="14.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31Sirv6"><img src="https://m.media-amazon.com/images/I/61z0Ap6OWfL._SR400,400_.jpg" alt="ASCINATE Lighted Makeup Mirror " /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31Sirv6">ASCINATE Lighted Makeup Mirror with 21 LED Lights Touch Screen Dimming, Tri-Fold 3X/2X/1X Magnification 180 Degree Rotation...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.94</span><span class="ori_price">$22.99</span></address>
+      <textarea readonly="readonly" class="code_area">35ZZAY17</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $22.99</strong> with promo code: <strong class="m_codes">35ZZAY17</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31Sirv6">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="32" data-price="19.71">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30jKyHe"><img src="https://m.media-amazon.com/images/I/61KqpPvmOCL._SR400,400_.jpg" alt="Smoothie Blender" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30jKyHe">Smoothie Blender, BILACA Personal Blender Single Serve for Shakes and Smoothies,Frozen Fruit Blender With 18oz BPA-Free Sport Bottles,300W</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.71</span><span class="ori_price">$28.98</span></address>
+      <textarea readonly="readonly" class="code_area">329PSP79</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>32% off at $28.98</strong> with promo code: <strong class="m_codes">329PSP79</strong></span></p><span class="ex_date ex_date_new">Expiration Date :  Sep 26, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30jKyHe">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="35" data-price="16.89">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/31GBAjM"><img src="https://m.media-amazon.com/images/I/51CZTbITEyL._SR400,400_.jpg" alt="KAKA Small Sling Bag" /></a>
@@ -137,89 +225,3 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31HB30P">Use Code at Amazon</a></div>
 </div>
 
-<!-- <div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner inner_top">
-    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
-      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
-</div>
-
- -->
