--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,7 +48,94 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+<div class="card clearfix" data-score="25" data-price="11.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31Hx4Bo"><img src="https://m.media-amazon.com/images/I/81CWHWkTLvL._SR400,400_.jpg" alt="Phone Tripod" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31Hx4Bo">Phone Tripod, Flexible Cell Phone Tripod Adjustable Camera Stand Holder with Wireless Remote and Universal Clip 360°...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.24</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">25DE5A2N</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $14.99</strong> with promo code: <strong class="m_codes">25DE5A2N</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31Hx4Bo">Use Code at Amazon</a></div>
+</div>
 
+<div class="card clearfix" data-score="50" data-price="29.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31QEGSx"><img src="https://m.media-amazon.com/images/I/714169nKECL._SR400,400_.jpg" alt="Wireless Security Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31QEGSx">Wireless Security Camera, Corsee 1080P Security Camera System Outdoor Cameras, Support 2 Way Audio,Outdoor Security...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.98</span><span class="ori_price">$59.97</span></address>
+      <textarea readonly="readonly" class="code_area">50NKTJXU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $59.97</strong> with promo code: <strong class="m_codes">50NKTJXU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31QEGSx">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="22.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30E9Kn1"><img src="https://m.media-amazon.com/images/I/51ORqmKiggL._SR400,400_.jpg" alt="Ulgoo Travel Duffel Bag Canvas Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30E9Kn1">Ulgoo Travel Duffel Bag Canvas Bag PU Leather Weekend Bag Overnight</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.79</span><span class="ori_price">$37.99</span></address>
+      <textarea readonly="readonly" class="code_area">40FZMNJX</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $37.99</strong> with promo code: <strong class="m_codes">40FZMNJX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30E9Kn1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="28.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30dsMW0"><img src="https://images-na.ssl-images-amazon.com/images/I/61wHGE6BPyL._SX679_.jpg" alt="Electric Fondue Maker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30dsMW0">Electric Fondue Maker 6 Cup Stainless Steel Electric Fondue Pot with Temperature Control, 8 Color Fondue Forks and Removable Pot...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.00</span><span class="ori_price">$45.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">D29UDPIZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $45.99</strong> with promo code: <strong class="m_codes">D29UDPIZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : 09/27/2019 11:59 PMPDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30dsMW0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="170.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LFELT3"><img src="https://m.media-amazon.com/images/I/514ykgyHubL._SR400,400_.jpg" alt="Robot Vacuum Cleaner" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LFELT3">Robot Vacuum Cleaner Self-Charging Robotic Vacuum Cleaner with Remote (Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$170.40</span><span class="ori_price">$425.99</span></address>
+      <textarea readonly="readonly" class="code_area">6047CZ43</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $425.99</strong> with promo code: <strong class="m_codes">6047CZ43</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LFELT3">Use Code at Amazon</a></div>
+</div>
+ 
  <div class="card clearfix" data-score="15" data-price="13.59">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2McZNYC"><img src="https://m.media-amazon.com/images/I/71shQ08ikfL._SR400,400_.jpg" alt="Spiralizer Vegetable Slicer" /></a>
