--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -75,6 +75,86 @@
 <div class="js-overlay-start start dealtube" data-url= "Youtube_URL"><button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button><button class="text">Play Video</button></div>
 -->
 
+<div class="card clearfix" data-score="26" data-price="25.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30g1kWI"><img src="https://images-na.ssl-images-amazon.com/images/I/618lUcvXssL._SX522_.jpg" alt="SanDisk 128GB MicroSDXC UHS-I Memory Card " /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>26% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30g1kWI">SanDisk 128GB MicroSDXC UHS-I Memory Card for Nintendo Switch - SDSQXAO-128G-GNCZN</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$25.99</span><span class="ori_price">$34.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30g1kWI">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LHq9mv"><img src="https://images-na.ssl-images-amazon.com/images/I/81XMMyJE-mL._SX522_.jpg" alt="SanDisk 64GB microSDXC UHS-I card" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LHq9mv">SanDisk 64GB microSDXC UHS-I card for Nintendo Switch - SDSQXAT-064G-GN6ZA</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$20.99</span><span class="ori_price">$42.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LHq9mv">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="14.96">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LENeGc"><img src="https://images-na.ssl-images-amazon.com/images/I/71Om5GPPZuL._SX679_.jpg" alt="Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LENeGc">Bluetooth Headphones, Letsfit Wireless Headphones, IPX7 Waterproof Sports Earphones Gym Running, HD Stereo Headset w/Mic,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.96</span><span class="ori_price">$19.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LENeGc">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="58.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30hc2fF"><img src="https://images-na.ssl-images-amazon.com/images/I/81tJ4JetHHL._SX425_.jpg" alt=">Battery-Biz Jump Starter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30hc2fF">Battery-Biz DRLJS20 Black Universal 12V 1100 Amp Lithium Ion Emergency Jump Starter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$58.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30hc2fF">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="136.85">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30hxiCQ"><img src="https://images-na.ssl-images-amazon.com/images/I/51Fn43nusML._SX425_.jpg" alt="Coway AP-1512HH Mighty Air Purifier " /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30hxiCQ">Coway AP-1512HH Mighty Air Purifier with True HEPA and Eco Mode</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$136.85</span><span class="ori_price">$229.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30hxiCQ">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="1,099.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2V6oZnz"><img src="https://images-na.ssl-images-amazon.com/images/I/91XcqPZTw8L._SX679_.jpg" alt="Samsung QN65Q6FN FLAT 65” QLED 4K UHD 6 Series Smart TV 2018" /></a>
