--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,7 +48,105 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
-<div class="card clearfix" data-score="25" data-price="11.24">
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LDRXrE"><img src="https://m.media-amazon.com/images/I/61x5YwALjTL._SR400,400_.jpg" alt="Deknei LED Closet Light" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LDRXrE">Deknei LED Closet Light, Rechargeable 33 LED Motion Sensor Under Cabinet Lights Wireless Night Lighting with 950mAh Battery ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_common tooltip_green"><span> + $2 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $2 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50NET1Y1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $18.99</strong> with promo code: <strong class="m_codes">50NET1Y1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LDRXrE">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="97.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30hVBj9"><img src="https://m.media-amazon.com/images/I/61-NNtreu1L._SR400,400_.jpg" alt="Yoleo Weight Bench" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30hVBj9">Yoleo Weight Bench（Upgrade Version）- Seat/Back/Feet Adjustable, 550 lbs Capacity, Folding Flat/Incline/Decline FID Bench,..</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$97.99</span><span class="ori_price">$139.98</span>
+        <div class="tooltip_common tooltip_green"><span> + $10.00 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $10.00 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30B2I9G4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $139.98</strong> with promo code: <strong class="m_codes">30B2I9G4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 27, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30hVBj9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="15.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LFErUm"><img src="https://m.media-amazon.com/images/I/71ajiSzo5FL._SR400,400_.jpg" alt="PETLESO Dog Door Screen" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LFErUm">PETLESO Dog Door Screen - Lockable Pet Door for Screen Pet Door for Small to Large Dogs Cats - Large</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.00</span><span class="ori_price">$25.00</span>
+        <div class="tooltip_common tooltip_green"><span> + 8% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 8% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40UX3XND</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $25.00</strong> with promo code: <strong class="m_codes">40UX3XND</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LFErUm">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="11.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30J4RsY"><img src="https://m.media-amazon.com/images/I/71UY3U9fjYL._SR400,400_.jpg" alt="Fidus Large 32oz Water Bottle" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30J4RsY">Fidus Large 32oz Water Bottle with Motivational Time Marker & Removable Strainer, Fast Flow, Flip Top Leakproof Durable BPA Free...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.89</span><span class="ori_price">$16.99</span></address>
+      <textarea readonly="readonly" class="code_area">306OIFKQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $16.99</strong> with promo code: <strong class="m_codes">306OIFKQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30J4RsY">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31IfFIS"><img src="https://m.media-amazon.com/images/I/61uOg+VlL2L._SR400,400_.jpg" alt="Solar Lights Outdoor,30 LED Wireless..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31IfFIS">Solar Lights Outdoor,30 LED Wireless Waterproof Security Solar Motion Sensor Lights,for Outdoor Patio, Garden, Deck, Yard, Drive,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30I71YKR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $29.99</strong> with promo code: <strong class="m_codes">30I71YKR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31IfFIS">Use Code at Amazon</a></div>
+</div>
+ 
+ <div class="card clearfix" data-score="25" data-price="11.24">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/31Hx4Bo"><img src="https://m.media-amazon.com/images/I/81CWHWkTLvL._SR400,400_.jpg" alt="Phone Tripod" /></a>
   </div>
