--- a/app/views/subcategories/index.html.erb
+++ b/app/views/subcategories/index.html.erb
@@ -7,7 +7,7 @@
 
    <ul class="clearfix">
     <li><a href="/categories">CATEGORIES,</a></li>
-    <li><a href="/subcategories"># KEYWORD</a></li>
+    <li><a href="/gadgets/keywords"># KEYWORD</a></li>
    </ul>
 
    <div class="subcategories">
